# icm20948-rust-driver

./: Cargo.toml  LICENSE  README.md
examples/arduino-nano/: Cargo.toml  README.md  rust-toolchain.toml
examples/arduino-nano/.cargo/: config.toml
examples/stm32f4/: Cargo.toml
examples/stm32f4/.cargo/: config.toml
src/: lib.rs  register.rs
src/transport/: i2c.rs  mod.rs  spi.rs
